[taotao-cloud-project-1552] update [ store promotion ]